--- a/nginx-docker/requirements/nginx/conf/nginx.conf
+++ b/nginx-docker/requirements/nginx/conf/nginx.conf
@@ -2,7 +2,7 @@ server {
 	listen 443 ssl; # le port 443 et le port standar http
 	listen [::]:443 ssl;
 
-	server_name vbachele.42.fr;
+	server_name mmarie.42.fr;
 	# On note le cert et la key (necessaire protocole ssl)
 	ssl_certificate		/etc/nginx/ssl/mmarie.crt;
 	ssl_certificate_key	/etc/nginx/ssl/mmarie.key;
