--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,8 @@
 server {
-	listen 443 ssl;
+	listen 443 ssl; # le port 443 et le port standar http
 	listen [::]:443 ssl;
 
-	server_name vbachele.42.fr;
+	server_name mmarie.42.fr;
 	# On note le cert et la key (necessaire protocole ssl)
 	ssl_certificate		/etc/nginx/ssl/mmarie.crt;
 	ssl_certificate_key	/etc/nginx/ssl/mmarie.key;
@@ -21,29 +21,31 @@ server {
 	}
 
 	location ~ \.php$ {
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
-		fastcgi_index index.php;
-		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$; # divise l uri et le ficheir php demande
+		fastcgi_pass wordpress:9000; # renvois les requete vers wordpress
+		fastcgi_index index.php; # fichier de base
+		include fastcgi_params; # param de base
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name; # va cherche les fichier php
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name; # nom du script a exec $fastcgi_script_name = contient le fichier php
 	}
 
 	# BONUS PART #
 
-	## Adminer ##
-	location ~ ^/adminer(/.*$|$) {
+	## Gestion de base de donne Adminer PHP ##
+	location ~ ^/adminer(/.*$|$) { # ne prend en charge que les requete /adminer
 		fastcgi_index index.php;
 		include /etc/nginx/fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME /var/www/html/index.php;
+		fastcgi_param SCRIPT_FILENAME /var/www/html/index.php; # renvois les requtte a adminer
 		fastcgi_pass adminer:9000;
 	}
-	## hugo (Bonus for the service of your choice)##
-	#proxy trafic on /me with hugo server
+
+		## HUGO ##
+		# Hugo cherche toute les URI en /me et renvois tout aux serveur de hugo
+		# Il cree des page static ainsi plus securise et plus performante et il reduit le nombre de requete aux serveur
     location            ^~ /me
     {
         include         /etc/nginx/proxy_params;
-        proxy_pass      http://hugo:1313/me;
+        proxy_pass      http://hugo:1313/me; # envois des requete vers le server hugo
     }
 
 	location            ^~ /static
@@ -52,5 +54,4 @@ server {
         proxy_pass      http://static_page:1313/static;
     }
 	##Static page ##
-	# END OF BONUS PART #
 }
