--- a/srcs/requirements/bonus/ftp_server/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp_server/conf/vsftpd.conf
@@ -1,21 +1,32 @@
 #!/bin/sh
 
-if [ ! -f "/etc/vsftpd/vsftpd.conf.bak" ]; then
+# Vérifier si les variables d'environnement sont définies
+if [ -z "$FTP_USR" ] || [ -z "$FTP_PWD" ]; then
+    echo "Erreur : FTP_USR et FTP_PWD doivent être définis !"
+    exit 1
+fi
 
+# Sauvegarde de la config originale si non faite
+if [ ! -f "/etc/vsftpd/vsftpd.conf.bak" ]; then
     mkdir -p /var/www/html
 
     cp /etc/vsftpd/vsftpd.conf /etc/vsftpd/vsftpd.conf.bak
     mv /tmp/vsftpd.conf /etc/vsftpd/vsftpd.conf
 
-    # Add the FTP_USER, change his password and declare him as the owner of wordpress folder and all subfolders
-    adduser $FTP_USR --disabled-password
+    # Création de l'utilisateur FTP
+    adduser --disabled-password --gecos "" $FTP_USR
     echo "$FTP_USR:$FTP_PWD" | /usr/sbin/chpasswd &> /dev/null
     chown -R $FTP_USR:$FTP_USR /var/www/html
 
-	#chmod +x /etc/vsftpd/vsftpd.conf
     echo $FTP_USR | tee -a /etc/vsftpd.userlist &> /dev/null
-
 fi
 
-echo "FTP started on :21"
+# Vérifier si le port 21 est déjà utilisé
+if netstat -tulnp | grep -q ":21 "; then
+    echo "Le port 21 est déjà utilisé. Arrêt du script."
+    exit 1
+fi
+
+echo "FTP démarré sur le port 21..."
 /usr/sbin/vsftpd /etc/vsftpd/vsftpd.conf
+tail -f /dev/null  # Évite la fermeture immédiate si en conteneur Docker
