--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -23,6 +23,7 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
 
 COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
 COPY ./tools/wp-config.php /var/www/html/wp-config.php
+COPY ./tools/change_user.sh /usr/local/bin/
 
 #Enable php
 RUN mkdir /run/php
