--- a/srcs/.env
+++ b/srcs/.env
@@ -14,6 +14,12 @@ FTP_PWD=mmarie_ftp42
 USER_ID=1002
 GROUP_ID=1002
 
+#Bonus Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_CACHE=mmarie.42.fr
+REDIS_CLIENT=phpredis
+
 # wp password
 
 WP_USERPASSWORD=Melvyn13/
