--- a/srcs/requirements/bonus/staticpage/Dockerfile
+++ b/srcs/requirements/bonus/staticpage/Dockerfile
@@ -13,7 +13,7 @@ RUN hugo new site /var/hugo/me \
  	&& cd /var/hugo/me \
  	&& git clone https://github.com/vaga/hugo-theme-m10c themes/m10c \
  	&& hugo new posts/presentation.md \
- 	&& hugo -b mmarie.42.fr/static \
+ 	&& hugo -b ******.42.fr/static \
 	&& mkdir -p /var/hugo/me/content/about
 
 # Copier le fichier de configuration
@@ -29,5 +29,5 @@ COPY ./conf/taxonomy.html /var/hugo/me/layouts/taxonomy/taxonomy.html
 
 EXPOSE 1313
 
-CMD ["hugo", "server", "--source=/var/hugo/me", "--bind=0.0.0.0", "--baseURL=https://mmarie.42.fr/static", "-p", "1313", "--logFile=/dev/stdout", "--appendPort=false"]
+CMD ["hugo", "server", "--source=/var/hugo/me", "--bind=0.0.0.0", "--baseURL=https://******.42.fr/static", "-p", "1313", "--logFile=/dev/stdout", "--appendPort=false"]
 
