--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mmarie <mmarie@student.42perpignan.fr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/03/21 17:11:51 by mmarie            #+#    #+#              #
-#    Updated: 2025/04/22 20:59:38 by mmarie           ###   ########.fr        #
+#    Created: 2025/03/21 17:11:51 by ******            #+#    #+#              #
+#    Updated: 2025/06/19 18:33:52 by mmarie           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,9 +18,9 @@ RUN apt-get update && apt-get install -y nginx openssl
 # Generate Certificate SSL
 RUN mkdir /etc/nginx/ssl
 RUN openssl req -newkey rsa:4096 -x509 -sha256 -days 42 -nodes \
-	-out /etc/nginx/ssl/mmarie.crt \
-	-keyout /etc/nginx/ssl/mmarie.key \
-	-subj "/C=FR/ST=Perpignan/L=Perpignan/O=42/OU=mmarie/CN=mmarie.42.fr/"
+	-out /etc/nginx/ssl/******.crt \
+	-keyout /etc/nginx/ssl/******.key \
+	-subj "/C=FR/ST=Perpignan/L=Perpignan/O=42/OU=******/CN=******.42.fr/"
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d
 
