--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,10 +2,10 @@
 		listen 443 ssl; # le port 443 et le port standar http
 		listen [::]:443 ssl;
 
-		server_name mmarie.42.fr;
+		server_name ******.42.fr;
 		# On note le cert et la key (necessaire protocole ssl)
-		ssl_certificate		/etc/nginx/ssl/mmarie.crt;
-		ssl_certificate_key	/etc/nginx/ssl/mmarie.key;
+		ssl_certificate		/etc/nginx/ssl/******.crt;
+		ssl_certificate_key	/etc/nginx/ssl/******.key;
 
 		# Protocole d'encryptions pour les cles ssl
 		ssl_protocols		TLSv1.2 TLSv1.3;
